# mix

./: .gitignore  Cargo.toml  LICENSE  Readme.md
mixfmt/: Cargo.toml  Readme.md
mixfmt/src/: main.rs
mixfmt/tests/: cli.rs  primes-formatted.mixal  primes-unformatted.mixal
mixlib/: Cargo.toml  Readme.md
mixlib/src/: char.rs  fmt.rs  lib.rs  num.rs
