[package]
name = "mixfmt"
version = "0.2.2"
edition = "2024"
readme = "Readme.md"
license = "MIT"
repository = "https://github.com/jhunterkohler/mix/tree/master/mixfmt"
description = "MIXAL formatting"

[dependencies]
clap = { version = "4.5.24", features = ["derive"] }
mixlib = { version = "0.4.0", path = "../mixlib" }

[dev-dependencies]
assert_cmd = "2.0.16"
tempfile = "3.15.0"
